@@ -4,7 +4,6 @@ import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Date;
@@ -17,6 +16,7 @@ import java.util.zip.GZIPInputStream;
 import org.apache.commons.fileupload.FileItem;
 import org.apache.commons.fileupload.ProgressListener;
 import org.apache.commons.fileupload.disk.DiskFileItem;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.openedit.Data;
@@ -295,7 +295,8 @@ public class UploadRequest implements ProgressListener
 				if( inItem.isBase64())
 				{
 					//TODO: Write a class to streamthis
-					byte[] all = item.getInputStream().readAllBytes();
+					byte[] all = IOUtils.toByteArray(item.getInputStream());
+					//byte[] all = item.getInputStream().readAllBytes();
 					String code = new String(all,"UTF-8");
 					code = code.substring(code.indexOf(",") +1,code.length());
 					byte[] tosave = Base64.getDecoder().decode(code);
